// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse function > extracts steps correctly 1`] = `
[
  Section {
    "content": [
      {
        "items": [
          {
            "type": "text",
            "value": "Crack the ",
          },
          {
            "alternatives": [
              {
                "displayName": "eggs",
                "index": 0,
                "itemQuantity": {
                  "quantity": {
                    "type": "fixed",
                    "value": {
                      "decimal": 3,
                      "type": "decimal",
                    },
                  },
                  "scalable": true,
                },
              },
            ],
            "id": "ingredient-item-0",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": " into a ",
          },
          {
            "index": 0,
            "quantity": {
              "type": "fixed",
              "value": {
                "decimal": 1,
                "type": "decimal",
              },
            },
            "type": "cookware",
          },
          {
            "type": "text",
            "value": ". Mix with some ",
          },
          {
            "alternatives": [
              {
                "displayName": "flour",
                "index": 1,
              },
            ],
            "id": "ingredient-item-1",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": " and add ",
          },
          {
            "alternatives": [
              {
                "displayName": "coarse salt",
                "index": 2,
              },
            ],
            "id": "ingredient-item-2",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": ".",
          },
        ],
        "type": "step",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Melt the ",
          },
          {
            "alternatives": [
              {
                "displayName": "butter",
                "index": 3,
                "itemQuantity": {
                  "quantity": {
                    "type": "fixed",
                    "value": {
                      "decimal": 50,
                      "type": "decimal",
                    },
                  },
                  "scalable": true,
                  "unit": {
                    "name": "g",
                  },
                },
              },
            ],
            "id": "ingredient-item-3",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": " in a ",
          },
          {
            "index": 1,
            "type": "cookware",
          },
          {
            "type": "text",
            "value": " on medium heat.",
          },
        ],
        "type": "step",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Cook for ",
          },
          {
            "index": 0,
            "type": "timer",
          },
          {
            "type": "text",
            "value": ".",
          },
        ],
        "type": "step",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Serve hot.",
          },
        ],
        "type": "step",
      },
    ],
    "name": "",
  },
]
`;

exports[`parse function > parses complex recipes correctly 1`] = `
Recipe {
  "arbitraries": [],
  "choices": {
    "ingredientGroups": Map {},
    "ingredientItems": Map {},
  },
  "cookware": [
    {
      "name": "Dutch oven",
    },
    {
      "name": "small bowl",
    },
    {
      "name": "13×9-inch baking dish",
    },
    {
      "name": "rubber spatula",
    },
    {
      "flags": [
        "optional",
      ],
      "name": "icing spatula",
    },
  ],
  "ingredients": [
    {
      "name": "lasagne noodles",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 9,
              "type": "decimal",
            },
          },
          "unit": undefined,
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "bulk Italian sausage",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 1.2,
              "type": "decimal",
            },
          },
          "unit": "lb",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "ground beef",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "den": 4,
              "num": 3,
              "type": "fraction",
            },
          },
          "unit": "lb",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "onion",
      "preparation": "medium, diced",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 1,
              "type": "decimal",
            },
          },
          "unit": undefined,
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "garlic",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 3,
              "type": "decimal",
            },
          },
          "unit": "cloves",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "crushed tomatoes",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 2,
              "type": "decimal",
            },
          },
          "unit": "cans",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "tomato paste",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 2,
              "type": "decimal",
            },
          },
          "unit": "cans",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "water",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "den": 3,
              "num": 2,
              "type": "fraction",
            },
          },
          "unit": "cup",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "sugar",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 2,
              "type": "decimal",
            },
          },
          "unit": "tbsp",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "fresh parsley",
      "preparation": "minced, divided",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 0.104,
              "type": "decimal",
            },
          },
          "unit": "l",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "dried basil",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 2,
              "type": "decimal",
            },
          },
          "unit": "tsp",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "fennel seed",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "den": 4,
              "num": 3,
              "type": "fraction",
            },
          },
          "unit": "tsp",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "salt",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "den": 4,
              "num": 3,
              "type": "fraction",
            },
          },
          "unit": "tsp",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "pepper",
      "preparation": "coarsely ground",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "den": 4,
              "num": 1,
              "type": "fraction",
            },
          },
          "unit": "tsp",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "egg",
      "preparation": "large, lightly beaten",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 1,
              "type": "decimal",
            },
          },
          "unit": undefined,
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "ricotta cheese",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 1,
              "type": "decimal",
            },
          },
          "unit": "carton",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "mozzarella",
      "preparation": "shredded",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "decimal": 4,
              "type": "decimal",
            },
          },
          "unit": "cups",
        },
      ],
      "usedAsPrimary": true,
    },
    {
      "name": "Parmesan",
      "preparation": "grated",
      "quantities": [
        {
          "quantity": {
            "type": "fixed",
            "value": {
              "den": 4,
              "num": 3,
              "type": "fraction",
            },
          },
          "unit": "cup",
        },
      ],
      "usedAsPrimary": true,
    },
  ],
  "metadata": {
    "author": "Pam Thompson",
    "cook time": "50m",
    "prep time": "1h",
    "servings": "12, 12 slices",
    "source": "https://www.tasteofhome.com/recipes/best-lasagna/",
    "tags": [
      "pasta",
      "casserole",
      "classic",
    ],
    "time": "1h50m",
    "title": "Best Lasagna",
  },
  "sections": [
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Bring a large pot of salted water to a boil. Cook the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "lasagne noodles",
                  "index": 0,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 9,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-0",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " according to the package directions. When complete, drain the noodles, and set aside.",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Meanwhile, heat a ",
            },
            {
              "index": 0,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": " over medium heat. Add the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "bulk Italian sausage",
                  "index": 1,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 1.2,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "lb",
                    },
                  },
                },
              ],
              "id": "ingredient-item-1",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "ground beef",
                  "index": 2,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "den": 4,
                        "num": 3,
                        "type": "fraction",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "lb",
                    },
                  },
                },
              ],
              "id": "ingredient-item-2",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " and diced ",
            },
            {
              "alternatives": [
                {
                  "displayName": "onion",
                  "index": 3,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 1,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-3",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ". Cook for ",
            },
            {
              "index": 0,
              "type": "timer",
            },
            {
              "type": "text",
              "value": " or until the meat is no longer pink, breaking up the meat with a large spoon as it cooks to create gorgeous crumbles. Add the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "garlic",
                  "index": 4,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 3,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "cloves",
                    },
                  },
                },
              ],
              "id": "ingredient-item-4",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", and cook for ",
            },
            {
              "index": 1,
              "type": "timer",
            },
            {
              "type": "text",
              "value": ", until the mixture is fragrant.",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Editor’s Tip: To ensure the noodles will not stick to each other, stir the water like a whirlpool when you add the pasta sheets.",
            },
          ],
          "type": "note",
        },
      ],
      "name": "Brown the beef",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Drain the mixture in the Dutch oven. Then, add the remaining sauce ingredients: ",
            },
            {
              "alternatives": [
                {
                  "displayName": "crushed tomatoes",
                  "index": 5,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 2,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "cans",
                    },
                  },
                },
              ],
              "id": "ingredient-item-5",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "tomato paste",
                  "index": 6,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 2,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "cans",
                    },
                  },
                },
              ],
              "id": "ingredient-item-6",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "water",
                  "index": 7,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "den": 3,
                        "num": 2,
                        "type": "fraction",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "cup",
                    },
                  },
                },
              ],
              "id": "ingredient-item-7",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "sugar",
                  "index": 8,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 2,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "tbsp",
                    },
                  },
                },
              ],
              "id": "ingredient-item-8",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "fresh parsley",
                  "index": 9,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 3,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "tbsp",
                    },
                  },
                },
              ],
              "id": "ingredient-item-9",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "dried basil",
                  "index": 10,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 2,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "tsp",
                    },
                  },
                },
              ],
              "id": "ingredient-item-10",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "fennel seed",
                  "index": 11,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "den": 4,
                        "num": 3,
                        "type": "fraction",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "tsp",
                    },
                  },
                },
              ],
              "id": "ingredient-item-11",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "salt",
                  "index": 12,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "den": 2,
                        "num": 1,
                        "type": "fraction",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "tsp",
                    },
                  },
                },
              ],
              "id": "ingredient-item-12",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " and ",
            },
            {
              "alternatives": [
                {
                  "displayName": "pepper",
                  "index": 13,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "den": 4,
                        "num": 1,
                        "type": "fraction",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "tsp",
                    },
                  },
                },
              ],
              "id": "ingredient-item-13",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ". ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Bring the mixture to a boil. Reduce the heat to a simmer. Cook, uncovered, for ",
            },
            {
              "index": 2,
              "type": "timer",
            },
            {
              "type": "text",
              "value": ", stirring occasionally.",
            },
          ],
          "type": "step",
        },
      ],
      "name": "Make the meat sauce",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "In a ",
            },
            {
              "index": 1,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": ", whisk together the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "egg",
                  "index": 14,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 1,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-14",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "ricotta cheese",
                  "index": 15,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 1,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "carton",
                    },
                  },
                },
              ],
              "id": "ingredient-item-15",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", and remaining ",
            },
            {
              "alternatives": [
                {
                  "displayName": "fresh parsley",
                  "index": 9,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "den": 4,
                        "num": 1,
                        "type": "fraction",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "cup",
                    },
                  },
                },
              ],
              "id": "ingredient-item-16",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " and ",
            },
            {
              "alternatives": [
                {
                  "displayName": "salt",
                  "index": 12,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "den": 4,
                        "num": 1,
                        "type": "fraction",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "tsp",
                    },
                  },
                },
              ],
              "id": "ingredient-item-17",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ". ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "If you haven’t already, grate the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "mozzarella",
                  "index": 16,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "decimal": 4,
                        "type": "decimal",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "cups",
                    },
                  },
                },
              ],
              "id": "ingredient-item-18",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " and ",
            },
            {
              "alternatives": [
                {
                  "displayName": "Parmesan",
                  "index": 17,
                  "itemQuantity": {
                    "quantity": {
                      "type": "fixed",
                      "value": {
                        "den": 4,
                        "num": 3,
                        "type": "fraction",
                      },
                    },
                    "scalable": true,
                    "unit": {
                      "name": "cup",
                    },
                  },
                },
              ],
              "id": "ingredient-item-19",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " cheeses.",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Editor’s Tip: For the freshest, creamiest taste, grate your own cheese at home.",
            },
          ],
          "type": "note",
        },
      ],
      "name": "Prepare the cheese filling",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Preheat the oven to 375°. ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Spoon 2 cups meat sauce into an ungreased ",
            },
            {
              "index": 2,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": ", spreading it out to cover the entire dish. Layer three noodles onto the sauce. Add one-third of the ricotta mixture, spreading it over the noodles with a ",
            },
            {
              "index": 3,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": " or an ",
            },
            {
              "index": 4,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": ". Sprinkle with 1 cup mozzarella cheese and 2 tablespoons Parmesan cheese.",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Repeat the layers twice, finishing with remaining meat sauce and cheeses. The dish will be very full by the time you get to the top!",
            },
          ],
          "type": "step",
        },
      ],
      "name": "Layer the lasagna ingredients",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Cover the baking dish, and bake for ",
            },
            {
              "index": 3,
              "type": "timer",
            },
            {
              "type": "text",
              "value": ". ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Remove the cover, and cook for an additional ",
            },
            {
              "index": 4,
              "type": "timer",
            },
            {
              "type": "text",
              "value": ", until the sauce is bubbling around the edges and the cheese is fully melted. ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Let the lasagna stand for ",
            },
            {
              "index": 5,
              "type": "timer",
            },
            {
              "type": "text",
              "value": " before slicing and serving.",
            },
          ],
          "type": "step",
        },
      ],
      "name": "Bake the lasagna",
    },
  ],
  "servings": 12,
  "timers": [
    {
      "duration": {
        "type": "fixed",
        "value": {
          "decimal": 10,
          "type": "decimal",
        },
      },
      "name": undefined,
      "unit": "minutes",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "decimal": 1,
          "type": "decimal",
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "decimal": 30,
          "type": "decimal",
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "decimal": 25,
          "type": "decimal",
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "decimal": 25,
          "type": "decimal",
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "decimal": 15,
          "type": "decimal",
        },
      },
      "name": undefined,
      "unit": "min",
    },
  ],
}
`;

exports[`parse function > parses notes correctly 1`] = `
[
  Section {
    "content": [
      {
        "items": [
          {
            "type": "text",
            "value": "This is a note at the beginning.",
          },
        ],
        "type": "note",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Add ",
          },
          {
            "alternatives": [
              {
                "displayName": "flour",
                "index": 0,
                "itemQuantity": {
                  "quantity": {
                    "type": "fixed",
                    "value": {
                      "decimal": 100,
                      "type": "decimal",
                    },
                  },
                  "scalable": true,
                  "unit": {
                    "name": "g",
                  },
                },
              },
            ],
            "id": "ingredient-item-0",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": "> and this.",
          },
        ],
        "type": "step",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "This is a note in the middle which continues on the next line.",
          },
        ],
        "type": "note",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Another step.",
          },
        ],
        "type": "step",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Another note on multiple lines starting with > for readability",
          },
        ],
        "type": "note",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "A final note.",
          },
        ],
        "type": "note",
      },
    ],
    "name": "",
  },
]
`;
